--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
 
     <!-- Eighth section of the landing page -->
      <footer class="section-eight">
-        <div class="container flex-max gap" >
+        <div class="flex-max gap container" >
           <div>
             <h2>What is Deupload?</h2>
             <p>Deupload is a cloud storage services based on Blockchain and Web3 technology, designed to help teams collaborate and file sharing in a completely private like never before.</p>
@@ -368,33 +368,37 @@
           </div> 
           <div class="products">
             <h2>Products</h2>
-            <p>Features</p>
-            <p>Solutions</p>
-            <p>Pricing</p>
-            <p>Token</p>
-            <p>Security</p>
-            <p>Comparison</p>
-          </div> 
-
+            <a href="#">Features</a>
+            <a href="#">Solutions</a>
+            <a href="#">Pricing</a>
+            <a href="#">Token</a>
+            <a href="#">Security</a>
+            <a href="#">Comparison</a>
+          </div>
+          
           <div class="resources">
             <h2>Resources</h2>
-            <p>Whitepaper</p>
-            <p>Developer</p>
-            <p>Band Kits</p>
-            <p>Compliance</p>
-            <p>Privacy Policy</p>
-            <p>Terms of service</p>
-          </div> 
-
+            <a href="#">Whitepaper</a>
+            <a href="#">Developer</a>
+            <a href="#">Band Kits</a>
+            <a href="#">Compliance</a>
+            <a href="#">Privacy Policy</a>
+            <a href="#">Terms of service</a>
+          </div>
+          
           <div class="community">
             <h2>Community</h2>
-            <p>Guide</p>
-            <p>Blogs</p>
-            <p>FAQs</p>
-            <p>Forum</p>
-            <p>Health Center</p>
-            <p>Support Desk</p>
-          </div> 
+            <a href="#">Guide</a>
+            <a href="#">Blogs</a>
+            <a href="#">FAQs</a>
+            <a href="#">Forum</a>
+            <a href="#">Health Center</a>
+            <a href="#">Support Desk</a>
+          </div>
+        </div>
+        <div class="last-footer">
+            <p>© 2022 Deupload. Powered by Conikal LLC</p>
+            <img src="Assets/Social icons.png" alt="">
         </div>
      </footer>
 </body>
