--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
     </section>
 
     <section class="section-six">
-        <div class="container">
+        <div class="container gap">
             <div class="grid-1">
                 <div>
                     <div>
