Added JS DOM file

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <nav class="nav-menu">
         <img class="logo" src="Assets/logo-color 1.png" alt="logo">
         <div>
-            <a class="nav-link" href="">Features</a>
-            <a class="nav-link" href="">Solutions</a>
+            <a class="nav-link" href="about.html">Features</a>
+            <a class="nav-link" href="index.html">Solutions</a>
             <a class="nav-link" href="">NFT Storge</a>
             <a class="nav-link" href="">Pricing</a>
             <a class="nav-link" href="">Developers</a>
