--- a/JS DOM File/task2.html
+++ b/JS DOM File/task2.html
@@ -1,108 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Css Clock</title>
-    <style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CSS Clock</title>
+  <style>
+    * {
+      background-size: cover;
+      font-family: Arial, Helvetica, sans-serif;
+      text-align: center;
+      font-size: 10px;
+    }
 
-        html{
-            background-color: white;
-            background-size: cover;
-            font-family: Arial, Helvetica, sans-serif;
-            text-align: center;
-            font-size: 10px;
+    body {
+      font-size: 2rem;
+      display: flex;
+      flex: 1;
+      min-height: 100vh;
+      align-items: center;
+      margin: 0;
+    }
 
+    .clock {
+      width: 30rem;
+      height: 30rem;
+      border: 2px solid white;
+      border-radius: 50%;
+      margin: 50px auto;
+      position: relative;
+      padding: 2rem;
+      box-shadow: 0 0 0px 4px rgba(0, 0, 0, 1), inset 0 0 0 3px #efefef, inset 0 0 10px black, 0 0 10px rgba(0, 0, 0, 2);
+    }
 
-        }
+    .clock-face {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      transform: translateY(-3px);
+    }
 
-        body{
-            font-size: 2rem;
-            display: flex;
-            flex: 1;
-            min-height: 100vh;
-            align-items: center;
-
-
-
-        }
-        .clock{
-            width: 30rem;
-            height: 30rem;
-            border: 2px solid white;
-            border-radius: 50%;
-            margin: 50px auto;
-            position: relative;
-            padding: 2rem;
-            box-shadow: 
-            0 0 0px 4px rgba(0, 0, 0, 1),
-            inset 0 0 0 3px #efefef,
-            inset 0 0 10px black,
-            0 0  10px rgba(0, 0, 0, 2);
-        }
-
-        .clock-face{
-            position: relative;
-            width: 100%;
-            height: 100%;
-            transform: translateY(-3px);
-
-        }
-
-        .hand{
-            width: 50%;
-            height: 6px;
-            background: black;
-            position:absolute;
-            top: 50%;
-            transform-origin: 100%;
-            transform: rotate(90deg);
-            transition: all 0.5s;
-            transition-timing-function: cubic-bezier(0.1, 2.7, 0.58,1);
-
-        }
-
-
-    </style>
-
-
+    .hand {
+      width: 50%;
+      height: 6px;
+      background: black;
+      position: absolute;
+      top: 50%;
+      transform-origin: 100%;
+      transform: rotate(90deg);
+      transition: all 0.5s;
+      transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
+    }
+  </style>
 </head>
+
 <body>
-
     <div class="clock">
-
         <div class="clock-face">
-            <div class="hand hour-hand"></div>
-            <div class="hand min-hand"></div>
-            <div class="hand second-hand"></div>
+          <div class="hand hour-hand"></div>
+          <div class="hand min-hand"></div>
+          <div class="hand second-hand"></div>
+          <div class="clock-numbers">
+            <div>12</div>
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+            <div>4</div>
+            <div>5</div>
+            <div>6</div>
+            <div>7</div>
+            <div>8</div>
+            <div>9</div>
+            <div>10</div>
+            <div>11</div>
         </div>
     </div>
-    
-</body>
+  
 
-<script>
-    
+  <script>
     const secondHand = document.querySelector('.second-hand');
     const minuteHand = document.querySelector('.min-hand');
     const hourHand = document.querySelector('.hour-hand');
+    const images = [
+      'url./js/Assets/)',
+      'url((link unavailable))',
+      'url((link unavailable))',
+      // Add more images here
+    ];
+    let currentIndex = 0;
 
     function setDate() {
-        const now = new Date();
-        const second = now.getSeconds();
-        const minute = now.getMinutes();
-        const hour = now.getHours();
-        const secondDegrees = ((second / 60) * 360) + 90;
-        const minuteDegrees = ((minute / 60) * 360) + 90;
-        const hourDegree = ((hour % 12) / 12) * 360 + 90;
+      const now = new Date();
+      const second = now.getSeconds();
+      const minute = now.getMinutes();
+      const hour = now.getHours();
+      const secondDegrees = ((second / 60) * 360) + 90;
+      const minuteDegrees = ((minute / 60) * 360) + 90;
+      const hourDegree = ((hour % 12) / 12) * 360 + 90;
+      secondHand.style.transform = `rotate(${secondDegrees}deg)`;
+      minuteHand.style.transform = `rotate(${minuteDegrees}deg)`;
+      hourHand.style.transform = `rotate(${hourDegree}deg)`;
+    }
 
-        secondHand.style.transform = `rotate(${secondDegrees}deg)`;
-        minuteHand.style.transform = `rotate(${minuteDegrees}deg)`;
-        hourHand.style.transform = `rotate(${hourDegree}deg)`;
+    function changeBackground() {
+      document.documentElement.style.backgroundImage = images[currentIndex];
+      currentIndex = (currentIndex + 1) % images.length;
     }
 
     setInterval(setDate, 1000);
-
-
-</script>
-
-</html>
+    setInterval(changeBackground, 5000); // Change background every 5 seconds
+  </script>
+</body>
