--- a/about.html
+++ b/about.html
@@ -56,5 +56,48 @@
                 <img class="frame" src="Assets/Frame (2).png" alt="">
             </div>
         </section>
+
+        <footer class="section-eight">
+            <div class="flex-max gap container" >
+              <div>
+                <h2>What is Deupload?</h2>
+                <p>Deupload is a cloud storage services based on Blockchain and Web3 technology, designed to help teams collaborate and file sharing in a completely private like never before.</p>
+                <img src="Assets/Secure badge.png" alt="">
+              </div> 
+              <div class="products flex-column">
+                <h2>Products</h2>
+                <p>Features</p>
+                <p>Solutions</p>
+                <p>Pricing</p>
+                <p>Token</p>
+                <p>Security</p>
+                <p>Comparison</p>
+              </div>
+              
+              <div class="resources flex-column">
+                <h2>Resources</h2>
+                <p>Whitepaper</p>
+                <p>Developer</p>
+                <p>Band Kits</p>
+                <p>Compliance</p>
+                <p>Privacy Policy</p>
+                <p>Terms of service</p>
+              </div>
+              
+              <div class="community flex-column">
+                <h2>Community</h2>
+                <p>Guide</p>
+                <p>Blogs</p>
+                <p>FAQs</p>
+                <p>Forum</p>
+                <p>Health Center</p>
+                <p>Support Desk</p>
+              </div>
+            </div>
+            <div class="last-footer">
+                <p>© 2022 Deupload. Powered by Conikal LLC</p>
+                <img src="Assets/Social icons.png" alt="">
+            </div>
+         </footer>
     </main>
 </body>
