--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <div class="left-section">
                 <img src="Assets/Group 259.svg" alt="Programming code">
             </div>
-            <div class="right-section gap-max">
+            <div class="right-section gap">
                 <h1>Start building your apps on IPFS with Deupload’s APIs and SDKs.</h1>
                 <p>
                     Aggregate data from many sources into your team’s workspace. Spend less time context switching, and increase visibility across the software and services you rely on.
@@ -302,7 +302,7 @@
                         <p>Leverage the power of our REST API to bring IPFS file into your external tools and products.</p>
                     </div>
                     <div>
-                        <p>Read documents</p>
+                        <a href="#">Read documents →</a>
                         <img src="Assets/Reading glasses-bro 1.png" alt="">
                     </div>
                 </div>
@@ -312,7 +312,7 @@
                         <p>We offer several official SDKs for certain programming languages that you can use in your apps.</p>
                     </div>
                     <div>
-                        <p>Download SDKs</p>
+                        <a href="#">Download SDKs ↓</a>
                         <img src="Assets/Hand coding-bro 1.png" alt="">
                     </div>
                 </div>
@@ -323,8 +323,8 @@
                         <h2>Join our community</h2>
                         <p>Learn from others, share your work, and extend your tool set with a diverse group of developers from around the world.</p>
                     </div>
-                    <div>
-                        <button>Submit a question</button>
+                    <div class="flex">
+                        <button class="submit-btn">Submit a question</button>
                         <img src="Assets/Work chat-bro 1.png" alt="">
                     </div>
                 </div>
@@ -334,7 +334,7 @@
                         <p>Keep track of changes and upgrades to the Deupload API.</p>
                     </div>
                     <div>
-                        <p>Releases</p>
+                        <a href="#">Releases →</a>
                         <img src="Assets/Version control-bro 1.png" alt="">
                     </div>
                 </div>
@@ -345,10 +345,10 @@
     <!-- Seventh section of the landing page -->
     <footer class="section-seven">
         <div class="container flex-max">
-            <div>
+            <div id="top-section">
                 <p>Sign up for developer updates</p>
                 <h2>Try something fresh and new on next version</h2>
-                <div>
+                <div class="email-signup">
                     <input type="email" placeholder="Enter your email">
                     <button>Sign Up</button>
                 </div>
@@ -359,41 +359,41 @@
     </footer>
 
     <!-- Eighth section of the landing page -->
-     <footer class="section-eight">
+    <footer class="section-eight">
         <div class="flex-max gap container" >
           <div>
             <h2>What is Deupload?</h2>
             <p>Deupload is a cloud storage services based on Blockchain and Web3 technology, designed to help teams collaborate and file sharing in a completely private like never before.</p>
             <img src="Assets/Secure badge.png" alt="">
           </div> 
-          <div class="products">
+          <div class="products flex-column">
             <h2>Products</h2>
-            <a href="#">Features</a>
-            <a href="#">Solutions</a>
-            <a href="#">Pricing</a>
-            <a href="#">Token</a>
-            <a href="#">Security</a>
-            <a href="#">Comparison</a>
+            <p>Features</p>
+            <p>Solutions</p>
+            <p>Pricing</p>
+            <p>Token</p>
+            <p>Security</p>
+            <p>Comparison</p>
           </div>
           
-          <div class="resources">
+          <div class="resources flex-column">
             <h2>Resources</h2>
-            <a href="#">Whitepaper</a>
-            <a href="#">Developer</a>
-            <a href="#">Band Kits</a>
-            <a href="#">Compliance</a>
-            <a href="#">Privacy Policy</a>
-            <a href="#">Terms of service</a>
+            <p>Whitepaper</p>
+            <p>Developer</p>
+            <p>Band Kits</p>
+            <p>Compliance</p>
+            <p>Privacy Policy</p>
+            <p>Terms of service</p>
           </div>
           
-          <div class="community">
+          <div class="community flex-column">
             <h2>Community</h2>
-            <a href="#">Guide</a>
-            <a href="#">Blogs</a>
-            <a href="#">FAQs</a>
-            <a href="#">Forum</a>
-            <a href="#">Health Center</a>
-            <a href="#">Support Desk</a>
+            <p>Guide</p>
+            <p>Blogs</p>
+            <p>FAQs</p>
+            <p>Forum</p>
+            <p>Health Center</p>
+            <p>Support Desk</p>
           </div>
         </div>
         <div class="last-footer">
